--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "postcss": "8.4.38",
     "postcss-lightningcss": "1.0.0",
     "postcss-url": "10.1.3",
-    "sass": "1.74.1",
+    "sass": "^1.92.1",
     "stylelint": "16.3.1",
     "stylelint-config-htmlacademy": "4.2.0",
     "w3c-html-validator": "1.7.0"
