--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "8.57.0",
     "eslint-config-htmlacademy": "10.0.1",
     "gulp": "4.0.2",
+    "gulp-csso": "^4.0.1",
     "gulp-esbuild": "0.12.0",
     "gulp-html-bemlinter": "3.0.1",
     "gulp-htmlmin": "5.0.1",
